# untis-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  logging.cpp  logging.hpp  objects.cpp  objects.hpp  render.cpp  render.hpp
.github/workflows/: cmake-multi-platform.yml
src/: config.cpp  config.hpp  exceptions.hpp  logging.cpp  logging.hpp  objects.cpp  objects.hpp  render.cpp  render.hpp
src/objects/: all.hpp  cache.cpp  cache.hpp  period.cpp  period.hpp  session.cpp  session.hpp  time_table.cpp  time_table.hpp
src/objects/base_date_entity/: all.hpp  base_date_entity.cpp  base_date_entity.hpp  holiday.hpp  school_year.hpp
src/objects/base_entity/: all.hpp  base_entity.cpp  base_entity.hpp  class.cpp  class.hpp  department.cpp  department.hpp  room.cpp  room.hpp  subject.cpp  subject.hpp  teacher.cpp  teacher.hpp
src/utils/: all.hpp  date_utils.cpp  date_utils.hpp  str_utils.hpp  types.hpp  vector_utils.hpp
